--- a/src/component/beatmaps/beatmapsHeader/BeatmapsHeader.scss
+++ b/src/component/beatmaps/beatmapsHeader/BeatmapsHeader.scss
@@ -4,7 +4,6 @@ $icon-size: 1.2em;
 .beatmap-page .beatmaps-header {
   display: flex;
   margin: 0.2em 0;
-  padding: 0.4em;
   justify-content: space-between;
   background-color: $color-table-background;
   border-radius: 3px;
